package cn.edu.scut.kapok.distributed.protos;

option java_outer_classname = "QueryProto";

option java_multiple_files = true;

message WordQuery {
    required string word = 1;
    optional string field = 2;
    optional float boost = 3;
}

message BooleanQuery {
    repeated Query queries = 1;
    enum Logic {
        AND = 0;
        OR = 1;
    }
    required Logic logic = 2;
    optional float boost = 3;
}

message Query {
    oneof query_oneof { WordQuery word_query = 1; BooleanQuery boolean_query = 2; }
    optional bool not = 3;
}

message QueryRequest {
    required Query query = 1;
    required uint32 from = 2;
    required uint32 count = 3;
}

message Field {
    required string name = 1;
    required string value = 2;
}

message QueryResult {
    repeated Field fields = 1;
    optional float rank = 2;
}

message QueryResponse {
    required uint64 total = 1;
    repeated QueryResult results = 2;
}
