package cn.edu.scut.kapok.distributed.protos;

import "query.proto";

option java_outer_classname = "SearchProto";

message SearchRequest {
    required Query query = 1;
    required uint32 page = 2;
    required uint32 perPage = 3;
    repeated string resources = 4;
}

message ResourceStat {
    required string resource = 1;
    required uint64 hit = 2;
}

message SearchResult {
    required QueryResult result = 1;
    required string resource = 2;
}

message SearchResponse {
    required uint64 totalHit = 1;
    repeated ResourceStat resourceStats = 2;
}